--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,9 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+
+# config/routes.yaml
+app_camera_capture:
+    path: '/camera/capture'
+    controller: 'App\Controller\CameraController::capture'
+    methods: ['GET', 'POST']
