--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=2f703a84cf5d5e1e91a163d714c4f395
 ###< symfony/framework-bundle ###
 
@@ -25,6 +25,7 @@ APP_SECRET=2f703a84cf5d5e1e91a163d714c4f395
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 DATABASE_URL="mysql://root:@127.0.0.1:3306/BDsediriger?serverVersion=mariadb-10.4.19"
+# DATABASE_URL="mysql://u585537963_DiegoRdM_SD:A:Kf?ay;7Uc&@127.0.0.1:3306/u585537963_bdsediriger?serverVersion=mariadb-5.1.1"
 
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
