--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,5 +5,10 @@
 # config/routes.yaml
 app_camera_capture:
     path: '/camera/capture'
-    controller: 'App\Controller\CameraController::capture'
+    controller: 'App\Controller\CaptureController::capture'
     methods: ['GET', 'POST']
+
+# app_camera_index:
+#     path: '/camera/'
+#     controller: 'App\Controller\CameraController::index'
+#     methods: ['GET']
