--- a/.env
+++ b/.env
@@ -24,8 +24,8 @@ APP_SECRET=2f703a84cf5d5e1e91a163d714c4f395
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/BDsediriger?serverVersion=mariadb-10.4.19"
-# DATABASE_URL="mysql://u585537963_DiegoRdM_SD:A:Kf?ay;7Uc&@127.0.0.1:3306/u585537963_bdsediriger?serverVersion=mariadb-5.1.1"
+# DATABASE_URL="mysql://root:@127.0.0.1:3306/BDsediriger?serverVersion=mariadb-10.4.19"
+DATABASE_URL="mysql://u585537963_DiegoRdM:8r8$VNrw/8eE-4@127.0.0.1:3306/u585537963_SD?serverVersion=mariadb-5.1.1"
 
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
