--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,15 +4,10 @@
 
 # config/routes.yaml
 app_camera_capture:
-    path: '/capture'
+    path: '/camera/capture'
     controller: 'App\Controller\CaptureController::capture'
     methods: ['GET', 'POST']
 
-app_camera_index:
-    path: '/camera'
-    controller: 'App\Controller\CameraController::index'
-    methods: ['GET']
-    
 # app_camera_index:
 #     path: '/camera/'
 #     controller: 'App\Controller\CameraController::index'
