--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,12 +3,12 @@
 #    controller: App\Controller\DefaultController::index
 
 # config/routes.yaml
-app_camera_capture:
-    path: '/camera/capture'
-    controller: 'App\Controller\CaptureController::capture'
-    methods: ['GET', 'POST']
+# app_camera_capture:
+#     path: '/camera/capture'
+#     controller: 'App\Controller\CaptureController::capture'
+#     methods: ['GET', 'POST']
 
 # app_camera_index:
-#     path: '/camera/'
+#     path: '/cameras/'
 #     controller: 'App\Controller\CameraController::index'
 #     methods: ['GET']
