bouton capture media

--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=prod
+APP_DEBUG=0
 APP_SECRET=2f703a84cf5d5e1e91a163d714c4f395
 ###< symfony/framework-bundle ###
 
