--- a/.env
+++ b/.env
@@ -15,8 +15,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
-APP_DEBUG=0
+APP_ENV=dev
+# APP_DEBUG=0
 APP_SECRET=2f703a84cf5d5e1e91a163d714c4f395
 ###< symfony/framework-bundle ###
 
