--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=2f703a84cf5d5e1e91a163d714c4f395
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://root:@127.0.0.1:3306/BDsediriger?serverVersion=mariadb-10.4.19"
-DATABASE_URL="mysql://u585537963_DiegoRdM:8r8$VNrw/8eE-4@127.0.0.1:3306/u585537963_SD?serverVersion=mariadb-5.1.1"
+DATABASE_URL="mysql://u585537963_SD:8r8$VNrw/8eE-4@127.0.0.1:3306/u585537963_DiegoRdM?serverVersion=mariadb-5.1.1"
 
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
